<resources>
    <string name="app_name">FoodOrder</string>
    <string name="description">description</string>
    <string name="item_added">Added</string>
    <string name="item_add">Add</string>
    <string name="cart_total">Total</string>
    <string name="text_login">Login</string>
    <string name="txt_login_email">Email</string>
    <string name="txt_login_password">Password</string>
    <string name="txt_register_confirm_password">ConfirmPassword</string>
    <string name="image_description">description</string>
    <string name="txt_menu_camera">Camera</string>
    <string name="txt_menu_gallery">Gallery</string>
    <string name="facebook_app_id">772709723089791</string> <string name="fb_login_protocol_scheme">fb772709723089791</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="action_menu_logout">Logout</string>
    <string name="txt_sign_up">Sign up!</string>
    <string name="txt_forget_pass">Forget Password?</string>
    <string name="warning_please_enter_data">Please Enter data</string>
    <string name="txt_btn_reset_password">Reset Password</string>
    <string name="txt_btn_cancel">Cancel</string>
    <string name="txt_displayname">DisplayName</string>
    <string name="txt_create_account_success">Create Account Success!</string>


</resources>
