<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_padding_normal"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_padding_normal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/width_height_logo_login"
                android:layout_height="@dimen/width_height_logo_login"
                android:layout_gravity="center"

                android:contentDescription="@string/description"
                android:src="@drawable/ic_round_person_add_24px" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:layout_marginEnd="@dimen/default_margin_padding_normal"
                android:layout_marginBottom="@dimen/default_margin_padding_small"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_login_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/displayInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:layout_marginEnd="@dimen/default_margin_padding_normal"
                android:layout_marginBottom="@dimen/default_margin_padding_small"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_displayname" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_small"
                android:layout_marginEnd="@dimen/default_margin_padding_normal"
                android:layout_marginBottom="@dimen/default_margin_padding_normal"
                android:theme="@style/TextLabel"
                app:passwordToggleContentDescription="@string/image_description"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/softBlack">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_login_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_small"
                android:layout_marginEnd="@dimen/default_margin_padding_normal"
                android:layout_marginBottom="@dimen/default_margin_padding_normal"
                android:theme="@style/TextLabel"
                app:passwordToggleContentDescription="@string/image_description"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/softBlack">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_register_confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_large"
                android:layout_marginEnd="@dimen/default_margin_padding_normal"
                android:background="@drawable/selector_btn_default"
                android:text="Create Account"
                android:textColor="#fff"

                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
